--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
               </li>
               <li class="flex flex-col items-center">
                 <div>
-                  <img src="/img/content/tommato.png" alt="cotton" />
+                  <a href="index1.html"><img src="/img/content/tommato.png" alt="cotton" /></a>
                 </div>
                 <h4 class="text-2xl text-custom-green font-bold pt-4">
-                  Vegetable seeds
+                  <a href="index1.html">Vegetable seeds</a>
                 </h4>
                 <div
                   class="w-[180px] border-b border-custom-green mt-[28px] mb-5"
