--- a/index1.html
+++ b/index1.html
@@ -73,7 +73,7 @@
                     </div>
                   </div>
                   <ul class="flex justify-between w-[500px] text-md">
-                    <li><a href="#" class="text-custom-gray-900">Home</a></li>
+                    <li><a href="index.html" class="text-custom-gray-900">Home</a></li>
                     <li>
                       <a href="#" class="text-custom-gray-900">Company Profile</a>
                     </li>
