--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li><a href="#" class="text-custom-gray-900">Products</a></li>
           <li><a href="#" class="text-custom-gray-900">Services</a></li>
           <li><a href="#" class="text-custom-gray-900">R & D</a></li>
-          <li><a href="#" class="text-custom-gray-900">Contact</a></li>
+          <li><a href="index3.html" class="text-custom-gray-900">Contact</a></li>
         </ul>
       </div>
     </header>
