--- a/index1.html
+++ b/index1.html
@@ -80,7 +80,7 @@
                     <li><a href="#" class="text-custom-gray-900">Products</a></li>
                     <li><a href="#" class="text-custom-gray-900">Services</a></li>
                     <li><a href="#" class="text-custom-gray-900">R & D</a></li>
-                    <li><a href="#" class="text-custom-gray-900">Contact</a></li>
+                    <li><a href="index3.html" class="text-custom-gray-900">Contact</a></li>
                   </ul>
                 </div>
               </header>
