--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/main.css" />
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
+    <style>
+      [class*="col-"] {
+       background-color: #eee;
+       text-align: center;
+       padding-top: 10px;
+       padding-bottom: 10px;
+       margin-bottom: 10px;
+       font-size: 2rem;
+      }
+     </style>
     <script>
       tailwind.config = {
         theme: {
@@ -45,6 +57,16 @@
         <title>Tomato all</title></head><body><div class="v53_10">
             <div class="v117_649">
 
+
+
+
+
+
+
+
+
+
+              
         </div>
         
         <div class="v53_13">
@@ -168,7 +190,7 @@
                     </div>
                     <div class="v53_126">
 
-                    </div><div class="v53_127">
+                   </div><div class="v53_127">
 
                     </div>
                     <div class="v53_130">
@@ -259,25 +281,32 @@ Tomato Determinate Red Standard Round
 Tomato Determinate Red Standard Round
 </span>
 </div>
-<span class="v53_288">Agridera aims to be one of the world's leading companies in the breeding, production, and marketing of tomato seeds. <b>We invest<br>intensively in research and development to provide solutions to growers and consumers in numerous countries around the world.</b><br>
+<span class="v53_288">Agridera aims to be one of the world's leading companies in the breeding, production, and marketing of tomato seeds. <b>We investx intensively in research and development to provide solutions to growers and consumers in numerous countries around the world.</b><br>
 In particular, we breed improved disease-resistant cultivars adapted to different markets globally.<br><br>
 
-Currently, emphasis is placed on combining Tomato Yellow Leaf Curl Virus (TYLCV) and Tomato Spotted Wilt Virus (TSWV) resistances<br>with other soil borne diseases into superior tomato breeding lines and hybrids. Moreover, comprehensive efforts are being undertaken to<br>develop varieties resistance to TBRFV virus (Tomato Brown Rugose Fruit Virus). <br><br>
+Currently, emphasis is placed on combining Tomato Yellow Leaf Curl Virus (TYLCV) and Tomato Spotted Wilt Virus (TSWV) resistances with other soil borne diseases into superior tomato breeding lines and hybrids. Moreover, comprehensive efforts are being undertaken to develop varieties resistance to TBRFV virus (Tomato Brown Rugose Fruit Virus). <br><br>
 
-In terms of horticultural traits, breeding is for earliness, different fruit sizes, firmness, red fruit color, flavor, crack resistance, shelf life,<br>and high/low temperature fruit set. Combinations of quality features and disease resistance are sought in a variety of types, namely<br>round and elongated shapes. 
+In terms of horticultural traits, breeding is for earliness, different fruit sizes, firmness, red fruit color, flavor, crack resistance, shelf life, and high/low temperature fruit set. Combinations of quality features and disease resistance are sought in a variety of types, namely round and elongated shapes. 
 </span>
-<span class="v117_637">Agirdera Tomato breeding programs are focusing on three main segments: Greenhouse Indeterminate Tomatoes, Open-field<br>Indeterminate Tomatoes, and Bush Type Open-field Tomatoes.</span>
+<span class="v117_637">Agirdera Tomato breeding programs are focusing on three main segments: Greenhouse Indeterminate Tomatoes, Open-field Indeterminate Tomatoes, and Bush Type Open-field Tomatoes.</span>
 <span class="v117_650">Agridera operates through international and local distributers around the world. </span>
+<div>
+<span class="v117_640">Greenhouse Tomato Breeding Program</span>
+<div class="v117_638_1">
+
+</div>
 <span class="v117_642">This breeding is aimed for the Spanish and Turkish markets. For single and cluster picks, round fruit shape and resistances of TYLCV, TSWV, Nematodes and FORL (Fusarium oxysporum f.sp. radicis-lycopersici). Some hybrids may include more resistances, such as Cladosporium and Leveillula Taurica (Lv). </span>
+</div>
 <span class="v117_643">This breeding is for Brazilian, Moroccan, and Turkish markets. The main focus is on large round shape fruits (200 grams plus); and resistances of TYLCV, TSWV, Nematodes and FORL. In the near future, F3 (Fusarium oxysporum f.sp. lycopersici) will be included as basic resistance in our cultivars.</span>
 <span class="v117_646">This breeding is for Mediterranean markets. We breed round and elongated shapes, standard sizes (140- 180 grams), and beef sizes (min. 180 grams up to 300 grams and more). We combine the resistances of TYLCV, TSWV and Nematodes as basic resistances in our hybrids. However, some hybrids may include more resistances, such as Cladosporium and Leveillula Taurica (Lv).</span>
 <div class="v117_638">
 
 </div>
-<div class="v117_638_1">
+
+<div class="v117_638_2">
 
 </div>
-<div class="v117_638_2">
+<div class="v117_638_3">
 
 </div>
 <div class="v117_638_4">
@@ -286,7 +315,7 @@ In terms of horticultural traits, breeding is for earliness, different fruit siz
 <div class="v117_651">
 
 </div>
-<span class="v117_640">Greenhouse Tomato Breeding Program</span>
+
 <span class="v117_644">Open-field Indeterminate Tomatoes</span>
 <span class="v117_647">Open-field Bush Type Tomatoes</span>
 <div class="name">
@@ -300,4 +329,6 @@ In terms of horticultural traits, breeding is for earliness, different fruit siz
 </div>
 </div>
 </body>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </html>
