--- a/index3.html
+++ b/index3.html
@@ -9,6 +9,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="/css/main.css" />
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/responsive.css" rel="stylesheet">
+          <style>
+          [class*="col-"] {
+           background-color: #eee;
+           text-align: center;
+           padding-top: 10px;
+           padding-bottom: 10px;
+           margin-bottom: 10px;
+           font-size: 2rem;
+          }
+         </style>
         <script>
           tailwind.config = {
             theme: {
@@ -290,4 +302,6 @@ Telephone: <a href="tel:97289449222">+972 8 944 9222</a></span>
 </div>
 </div>
 </body>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </html>
