--- a/index1.html
+++ b/index1.html
@@ -54,7 +54,25 @@
         },
       };
     </script>
+    <link href="css/responsive.css" rel="stylesheet">
+    <link href="css/responsive2.css" rel="stylesheet">
         <title>Tomato all</title></head><body><div class="v53_10">
+
+          <input type="checkbox" id="hmt" class="hidden-menu-ticker">
+          <label class="btn-menu" for="hmt">
+              <span class="first"></span>
+              <span class="second"></span>
+              <span class="third"></span>
+          </label>
+          <ul class="hidden-menu">
+              <li><a href="#" class="text-custom-gray-900">Home</a></li>  
+              <li><a href="#" class="text-custom-gray-900">Company Profile</a></li>
+              <li><a href="#" class="text-custom-gray-900">Products</a></li>
+              <li><a href="#" class="text-custom-gray-900">Services</a></li>
+              <li><a href="#" class="text-custom-gray-900">R & D</a></li>
+              <li><a href="index3.html" class="text-custom-gray-900">Contact</a></li>
+          </ul>
+
             <div class="v117_649">
 
 
@@ -76,7 +94,7 @@
                 <div class="w-[226px] h-[113px]">
                   <img src="/img/icons/logo.png" alt="logo" />
                 </div>
-                <div class="flex flex-col justify-between">
+                <div class="flex flex-col justify-between" id="bbbb">
                   <div
                     class="w-[350px] h-[30px] flex justify-between border-b border-custom-gray-900 items-center self-end"
                   >
@@ -188,45 +206,18 @@
                         </div>
                         
                     </div>
-                    <div class="v53_126">
+                    <!--<div class="v53_126">
 
-                   </div><div class="v53_127">
+                   </div>
+                   <div class="v53_127">
 
-                    </div>
-                    <div class="v53_130">
-                        <div class="v53_131">
+                    </div>-->
+                    
 
-                        </div>
-                        <div class="v53_132">
 
-                        </div>
-                        <span class="v53_146"><h5><b>TAG 1000 (TAG 853)</b></h5>
-Tomato Determinate Red Standard Round
-</span>
-</div>
-<div class="v53_147">
-    <div class="v53_148">
 
-    </div>
-    <div class="v53_149">
-
-    </div>
-    <span class="v53_150"><h5><b>TAG 1003 (TAG 834 )</b></h5>
-Tomato Determinate Red Standard Round
-</span>
-</div>
-<div class="v53_159">
-    <div class="v53_160">
-
-    </div>
-    <div class="v53_161">
-
-    </div>
-    <span class="v53_162"><h5><b>TAG 1006 (TAG 898)</b></h5>
-Tomato Determinate Red Elongated
-</span>
-</div>
-<div class="v53_135">
+ 
+  <div class="v53_135">
     <div class="v53_136">
 
     </div>
@@ -237,50 +228,98 @@ Tomato Determinate Red Elongated
 Tomato Determinate Red Standard Round
 </span>
 </div>
+
+<div class="v53_140">
+  <div class="v53_141">
+
+  </div>
+  <div class="v53_142">
+
+  </div>
+  <span class="v53_143"><h5><b>TAG 1002 (TAG 809)</b></h5>
+Tomato Determinate Red Standard Round
+</span>
+</div>
+
+<div class="v53_155">
+  <div class="v53_156">
+
+  </div>
+  <div class="v53_157">
+
+  </div>
+  <span class="v53_158"><h5><b>TAG 1005 (TAG 800)</b></h5>
+Tomato Determinate Red Standard Round
+</span>
+</div>
+  
+<div class="v53_130">
+  <div class="v53_131">
+
+  </div>
+  <div class="v53_132">
+
+  </div>
+  <span class="v53_146"><h5><b>TAG 1000 (TAG 853)</b></h5>
+Tomato Determinate Red Standard Round
+</span>
+</div>
+
+<div class="v53_147">
+  <div class="v53_148">
+
+  </div>
+  <div class="v53_149">
+
+  </div>
+  <span class="v53_150"><h5><b>TAG 1003 (TAG 834 )</b></h5>
+Tomato Determinate Red Standard Round
+</span>
+</div>
+
 <div class="v53_151">
-    <div class="v53_152">
+  <div class="v53_152">
 
-    </div>
-    <div class="v53_153">
+  </div>
+  <div class="v53_153">
 
-    </div>
-    <span class="v53_154"><h5><b>TAG 1004 (TAG 848)</b></h5>
+  </div>
+  <span class="v53_154"><h5><b>TAG 1004 (TAG 848)</b></h5>
 Tomato Determinate Red BEEF Round
 </span>
 </div>
+
+<div class="v53_159">
+  <div class="v53_160">
+
+  </div>
+  <div class="v53_161">
+
+  </div>
+  <span class="v53_162"><h5><b>TAG 1006 (TAG 898)</b></h5>
+Tomato Determinate Red Elongated
+</span>
+</div>
+
 <div class="v53_163">
-    <a href="index2.html"><div class="v53_164">
+  <a href="index2.html"><div class="v53_164">
 
-    </div></a>
-    <div class="v53_165">
+  </div></a>
+  <div class="v53_165">
 
-    </div>
-    <span class="v53_166"><a href="index2.html"><h5><b>TAG 1007 (TAG 816)</b></h5>
+  </div>
+  <span class="v53_166"><a href="index2.html"><h5><b>TAG 1007 (TAG 816)</b></h5>
 Tomato Determinate Red Elongated</a>
 </span>
 </div>
-<div class="v53_140">
-    <div class="v53_141">
 
-    </div>
-    <div class="v53_142">
 
-    </div>
-    <span class="v53_143"><h5><b>TAG 1002 (TAG 809)</b></h5>
-Tomato Determinate Red Standard Round
-</span>
-</div>
-<div class="v53_155">
-    <div class="v53_156">
 
-    </div>
-    <div class="v53_157">
 
-    </div>
-    <span class="v53_158"><h5><b>TAG 1005 (TAG 800)</b></h5>
-Tomato Determinate Red Standard Round
-</span>
-</div>
+
+
+
+
 <span class="v53_288">Agridera aims to be one of the world's leading companies in the breeding, production, and marketing of tomato seeds. <b>We investx intensively in research and development to provide solutions to growers and consumers in numerous countries around the world.</b><br>
 In particular, we breed improved disease-resistant cultivars adapted to different markets globally.<br><br>
 
