--- a/index2.html
+++ b/index2.html
@@ -54,7 +54,25 @@
         },
       };
     </script>
-        <title>Document</title>
+    <link href="css/responsive.css" rel="stylesheet">
+    <link href="css/responsive2.css" rel="stylesheet">
+        <title>Tomato one</title>
+        <input type="checkbox" id="hmt" class="hidden-menu-ticker">
+        <label class="btn-menu" for="hmt">
+            <span class="first"></span>
+            <span class="second"></span>
+            <span class="third"></span>
+        </label>
+        <ul class="hidden-menu">
+            <li><a href="index.html" class="text-custom-gray-900">Home</a></li>  
+            <li><a href="#" class="text-custom-gray-900">Company Profile</a></li>
+            <li><a href="#" class="text-custom-gray-900">Products</a></li>
+            <li><a href="#" class="text-custom-gray-900">Services</a></li>
+            <li><a href="#" class="text-custom-gray-900">R & D</a></li>
+            <li><a href="index3.html" class="text-custom-gray-900">Contact</a></li>
+        </ul>
+
+
     </head>
     <body>
 
@@ -63,7 +81,7 @@
             <div class="w-[226px] h-[113px]">
               <img src="/img/icons/logo.png" alt="logo" />
             </div>
-            <div class="flex flex-col justify-between">
+            <div class="flex flex-col justify-between" id="bbbb">
               <div
                 class="w-[350px] h-[30px] flex justify-between border-b border-custom-gray-900 items-center self-end"
               >
