--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </script>
     <link href="css/responsive.css" rel="stylesheet">
     <link href="css/responsive2.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.js"></script>
+
     <title>Agridera</title>
   </head>
 
