--- a/index2.html
+++ b/index2.html
@@ -56,6 +56,7 @@
     </script>
     <link href="css/responsive.css" rel="stylesheet">
     <link href="css/responsive2.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.js"></script>
         <title>Tomato one</title>
         <input type="checkbox" id="hmt" class="hidden-menu-ticker">
         <label class="btn-menu" for="hmt">
